--- a/BtLaCosta/estilos.css
+++ b/BtLaCosta/estilos.css
@@ -460,8 +460,10 @@ main h1 {
   .carouselImg {
     width: 450px;
     height: 300px;
-    justify-content: center;
-    margin: 50px;
+  }
+  .info h3 {
+    margin: 20px 70px;
+    font-size: 15px;
   }
   h2 {
     font-size: 25px;
