--- a/BtLaCosta/estilos.scss
+++ b/BtLaCosta/estilos.scss
@@ -537,8 +537,11 @@ $botones: (
                 .carouselImg{
                     width: 450px;
                     height: 300px;
-                    justify-content: center;
-                    margin:50px
+                }
+
+                .info h3 {
+                    margin: 20px 70px;
+                    font-size: 15px;
                 }
 
                 h2{
