--- a/BtLaCosta/estilos.scss
+++ b/BtLaCosta/estilos.scss
@@ -467,11 +467,9 @@ $botones: (
                 .chicanot{
                    width: 350px;
                    height: 250px;
-                   display: flex;
                    border-radius: 1cm;
                    border: 3px solid black;
                    margin:50px auto;
-                   justify-content: center;
                 }
 
                 .carouselImg{
@@ -573,9 +571,8 @@ $botones: (
     }
 
     .chicanot{
-        width: 250px;
-        height: 150px;
-        margin: 10px;
+        width: 200px;
+        height: 140px;
     }
 
     .container-img-list{
@@ -594,9 +591,9 @@ $botones: (
     }
 
     h3 {
-        font-size: 18px;
-        text-align: justify;
-        margin: 15px;
+        font-size: 15px;
+        text-align: center;
+        margin: 5px 0 15px;
     }
 
     .container-img-list li {
