--- a/BtLaCosta/estilos.css
+++ b/BtLaCosta/estilos.css
@@ -518,6 +518,4 @@ main h1 {
     margin: 10px 30px;
     font-size: 15px;
   }
-}
-
-/*# sourceMappingURL=estilos.css.map */
+}/*# sourceMappingURL=estilos.css.map */
