--- a/BtLaCosta/estilos.css
+++ b/BtLaCosta/estilos.css
@@ -17,11 +17,6 @@ header {
   width: 100%;
 }
 
-header {
-  grid-area: header;
-  background-color: azure;
-}
-
 a {
   text-decoration: none;
   display: inline-block;
@@ -53,11 +48,6 @@ ul li:hover {
   display: inline-block;
   transform: scale(2);
   color: whitesmoke;
-}
-
-nav {
-  grid-area: nav;
-  background-color: black;
 }
 
 nav ul {
@@ -123,11 +113,6 @@ span {
 footer {
   padding: 10px;
   margin-top: 100px;
-  background-color: black;
-}
-
-footer {
-  grid-area: footer;
   background-color: black;
 }
 
@@ -251,44 +236,6 @@ main h1 {
   justify-content: center;
 }
 
-.main {
-  display: grid;
-  background-color: rgb(255, 255, 255);
-  margin-bottom: 1fr;
-  gap: 10px;
-  grid-template-areas: "nav" "header" "galeria" "footer";
-}
-
-.galeria {
-  grid-area: galeria;
-  background-color: rgba(94, 151, 249, 0.991);
-}
-
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  background-color: azure;
-  padding: 30px;
-}
-
-.divImg {
-  padding: 20px;
-  margin: 10px;
-}
-
-.imgGaleria {
-  width: 290px;
-  height: 190px;
-  background-color: azure;
-  position: relative;
-}
-
-.imgGaleria:hover {
-  transform: scale(1.3);
-}
-
 .demandaImg {
   display: flex;
   flex-direction: column;
@@ -351,25 +298,27 @@ main h1 {
   margin: 10px;
 }
 
+.galeria {
+  display: grid;
+  gap: 10px;
+  justify-items: center;
+}
+
+.imgGaleria {
+  width: 210px;
+  height: 160px;
+}
+
 @media (min-width: 500px) {
-  .main {
-    margin: 0;
-    grid-template-areas: "nav nav" "header header" "galeria galeria" "footer footer";
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
   }
   .imgGaleria {
-    width: 350px;
-    height: 300px;
+    width: 150px;
+    height: 100px;
   }
 }
 @media (min-width: 768px) {
-  .main {
-    margin-bottom: 1.5em;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-areas: "nav nav nav" "header header header" "galeria galeria galeria" "footer footer footer";
-  }
-  .galeria {
-    background-color: rgba(94, 151, 249, 0.991);
-  }
   .imgGaleria {
     width: 200px;
     height: 150px;
@@ -381,16 +330,13 @@ main h1 {
   }
 }
 @media (min-width: 1024px) {
-  .main {
-    margin-bottom: 1.5em;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "nav nav nav" "header header header" "galeria galeria galeria" "footer footer footer";
-  }
   .imgGaleria {
-    width: 400px;
-    height: 350px;
+    width: 330px;
+    height: 300px;
   }
 }
+
+
 @media (max-width: 768px) {
   .imgPrincipal {
     display: flex;
@@ -518,4 +464,6 @@ main h1 {
     margin: 10px 30px;
     font-size: 15px;
   }
-}/*# sourceMappingURL=estilos.css.map */
+}
+
+/*# sourceMappingURL=estilos.css.map */
